# stationery-fight

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Info.plist  NOTICE.md  README.md  icon.icns  python_setting_template.jsonc  stationery-fight.sln  stationery-fight.vcxproj  stationery-fight.vcxproj.filters
App/: Resource.rc
App/empty.app/Contents/: Info.plist
App/move.app.dSYM/Contents/: Info.plist
App/move.app/Contents/: Info.plist
App/move.app/Contents/_CodeSignature/: CodeResources
App/resource/: config.json
Stationery Fight.xcodeproj/: project.pbxproj
Stationery Fight.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Stationery Fight.xcodeproj/project.xcworkspace/xcuserdata/iwahashiaya.xcuserdatad/: UserInterfaceState.xcuserstate
Stationery Fight.xcodeproj/project.xcworkspace/xcuserdata/iwahashikeigo.xcuserdatad/: UserInterfaceState.xcuserstate
Stationery Fight.xcodeproj/xcshareddata/xcschemes/: Stationery Fight(Release).xcscheme  Stationery Fight.xcscheme
Stationery Fight.xcodeproj/xcuserdata/iwahashikeigo.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Stationery Fight.xcodeproj/xcuserdata/iwahashikeigo.xcuserdatad/xcschemes/: xcschememanagement.plist
move.xcodeproj/: project.pbxproj
move.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
original_resource/dot/pencil_lead/: enemy.dt3  friend.dt3
original_resource/ilustlater-svg/castle/: enemy.ai  enemy_attack.ai  enemy_attack_silhouette.ai  enemy_silhouette.ai  friend.ai  friend_attack.ai  friend_attack_silhouette.ai  friend_silhouette.ai
python/: main.py
python/gym_envs/: __init__.py  stfi.py
src/: Common.cpp  Common.hpp  Main.cpp  Main.hpp  common.cpp  common.hpp  define.cpp  define.hpp  headless.cpp  json.hpp  logic.cpp  logic.hpp  player.cpp  player.hpp  types.hpp
src/Scenes/: DifficultySetting.cpp  DifficultySetting.hpp  Game.cpp  Game.hpp  RuleException.cpp  RuleException.hpp  RuleExplanation.cpp  RuleExplanation.hpp  Title.cpp  Title.hpp
(+4 files in other folders)
